Fix search box alignment issue.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -39,13 +39,11 @@ p {
     font-family: "Courier New", Courier, monospace;
 }
 
-input {
-    text-align: center;
-    padding: 6px;
-    margin-top: 8px;
-    margin-right: auto;
-    margin-left: auto;
-    display: inline-block;
+/* Align search box */
+#search-bar{
+    width: 100%;
+    height: 25%;
     border: none;
-    font-size: 12px;
+    font-size: 1.2em;
 }
+
